# pricing-assistant

./: .gitignore  LICENSE  README.md  launch.py  pyproject.toml  test_recommendation.py
src/pricing_assistant/: __init__.py  __main__.py
src/pricing_assistant/core/: pricing_engine.py
src/pricing_assistant/services/: analysis.py
src/pricing_assistant/sources/: base.py  vinted.py
src/pricing_assistant/ui/: cli.py  gui_launcher.py
src/pricing_assistant/ui/gui/: main_window.py
src/pricing_assistant/ui/gui/components/: __init__.py  history_panel.py  loading_overlay.py  product_form.py  results_display.py
src/pricing_assistant/ui/gui/themes/: dark_theme.py  light_theme.py
src/pricing_assistant/utils/: config.py
