[project]
name = "pricing-assistant"
version = "0.1.0"
description = "Assistente de precificação para marketplaces"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0"
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"